[gd_scene load_steps=11 format=3 uid="uid://ba3xecoe67obj"]

[ext_resource type="Script" path="res://scripts/ui/Game_UI.gd" id="1_uiqbi"]
[ext_resource type="Texture2D" uid="uid://cecjn46tp0saf" path="res://assets/UI/health/health_background.png" id="2_aifsy"]
[ext_resource type="Texture2D" uid="uid://dhtnygocwnedw" path="res://assets/UI/health/health_ui_high.png" id="3_skhav"]

[sub_resource type="LabelSettings" id="LabelSettings_u3177"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_dl2oy"]
font_size = 80
shadow_size = 30
shadow_color = Color(0, 0, 0.427451, 0.858824)
shadow_offset = Vector2(5, 2)

[sub_resource type="Animation" id="Animation_w3hcd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WaveLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gk4xu"]
resource_name = "change_wave_label"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WaveLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_glb2n"]
resource_name = "hide_wave_label"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WaveLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1.31951, 1.31951),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1kom3"]
resource_name = "show_wave_label"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WaveLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1.31951, 1.31951),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1sg0"]
_data = {
"RESET": SubResource("Animation_w3hcd"),
"change_wave_label": SubResource("Animation_gk4xu"),
"hide_wave_label": SubResource("Animation_glb2n"),
"show_wave_label": SubResource("Animation_1kom3")
}

[node name="Game_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uiqbi")
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AmmoLabel" type="Label" parent="CanvasLayer"]
offset_left = 1554.0
offset_top = 924.0
offset_right = 1801.0
offset_bottom = 1015.0
text = "100/100
"
label_settings = SubResource("LabelSettings_u3177")
metadata/_edit_use_anchors_ = true

[node name="PointsLabel" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.210938
offset_left = 38.0
offset_top = 924.0
offset_right = 285.0
offset_bottom = 1015.0
text = "$0"
label_settings = SubResource("LabelSettings_u3177")
text_overrun_behavior = 1
metadata/_edit_use_anchors_ = true

[node name="HealthProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -408.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 104.0
grow_horizontal = 0
value = 100.0
rounded = true
texture_under = ExtResource("2_aifsy")
texture_progress = ExtResource("3_skhav")
texture_progress_offset = Vector2(8, 8)

[node name="WaveLabel" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.5
offset_right = 196.5
offset_bottom = 113.0
grow_horizontal = 2
text = "Wave 0"
label_settings = SubResource("LabelSettings_dl2oy")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w1sg0")
}
